--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-* Web Jan 26 2011 Bernd Stramm <bernd.stramm@gmail.com> - 0.1.15-1
+* Wed Jan 26 2011 Bernd Stramm <bernd.stramm@gmail.com> - 0.1.15-1
 - peer sweeper removes dead peers from C list
 
 * Mon Jan 24 2011 Bernd Stramm <bernd.stramm@gmail.com> - 0.1.14-1
