--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+* Tue Feb 08 2011 Bernd Stramm <bernd.stramm@gmail.com> - 0.2.0-1
+- release version 0.2.0
+
 * Mon Jan 31 2011 Bernd Stramm <bernd.stramm@gmail.com> - 0.1.16-1
 - poling sequence per server
 
